Remove new catalog API reflection calls. Separate JDK9+/JDK8 code.